# anonymizer

./: .gitignore  README.md  TODO.md  TODO.txt  anonymizer.spec  pyproject.toml  requirements.txt
data/: manual_types.json  sessions.json
data_postal/: postcodes_merged_unique.csv
depricated/datasets/: data_mapping.txt  label_policy.json
depricated/datasets/data/: Dataset_02.txt
depricated/datasets/gold/: Dataset_01.json  Dataset_03.json  Dataset_04.json  Dataset_05.json
depricated/datasets/token/: tokens_Dataset_01.json  tokens_Dataset_02.json  tokens_Dataset_03.json  (+2 more)
evaluation/datasets/: data_mapping.txt  label_policy.json
evaluation/result/: ALL_labels_combined.txt  ALL_labels_ner.txt  ALL_labels_regex.txt  ALL_result.txt  Dataset_01_result.debug.txt  Dataset_02_result.debug.txt  Dataset_02_result.txt  Dataset_14_string_positions.txt  Dataset_26_string_positions.txt
evaluation/script/: eval_all.py  eval_runtime_only.py  eval_single.py  gold_validator.py  plot_eval.py
models/: plz_validator.pkl
src/: cli.py  config.json  ui_app.py
src/anonymizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/assets/: logo.icns
src/core/: config.py  einstellungen.py  io.py  paths.py  typen.py  warnpolicy.py  zusammenführen.py
src/detectors/: __init__.py
src/examples/: Dataset_01.txt  Dataset_03.txt
src/pipeline/: anonymisieren.py  validation.py
src/services/: anonymizer.py  manual_categories.py  manual_tokens.py  session_manager.py
src/state/: store.py
src/validation/: __init__.py  postcode.py  registry.py  types.py
(+1296 files in other folders)
