[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymizer"
version = "0.2.0"
description = "Anonymisierung personenbezogener Daten (Regex + NER, reversible Token optional)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.7",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "flet>=0.27.2"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0.20241016"
]

[project.scripts]
anonymizer-app = "ui_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true